Uploaded image for project: 'Apache Arrow'
  1. Apache Arrow
  2. ARROW-736

[Python] Mixed-type object DataFrame columns should not silently coerce to an Arrow type by default

    XMLWordPrintableJSON

Details

    • Bug
    • Status: Resolved
    • Major
    • Resolution: Fixed
    • None
    • 0.3.0
    • Python
    • None

    Description

      In [4]: df = pd.DataFrame({'a': ['a', 1, 2.0]})
      
      In [5]: df
      Out[5]: 
         a
      0  a
      1  1
      2  2
      
      In [6]: pt = pa.Table.from_pandas(df)
      
      In [7]: pt.to_pandas()
      Out[7]: 
            a
      0     a
      1  None
      2  None
      

      Attachments

        Issue Links

          Activity

            People

              cpcloud Phillip Cloud
              wesm Wes McKinney
              Votes:
              0 Vote for this issue
              Watchers:
              2 Start watching this issue

              Dates

                Created:
                Updated:
                Resolved: